--- a/main.css
+++ b/main.css
@@ -39,8 +39,12 @@ nav {
   color: #fff;
 }
 
+nav #all {
+  margin-bottom: 30px;
+}
+
 nav li {
-  height: 3rem;
+  height: 2.8rem;
   padding-top: 15px;
   box-sizing: border-box;
 }
@@ -55,11 +59,11 @@ nav h1:before {
   background-color: #fff;
 }
 
-nav #nav_all h1:before {
+nav #all h1:before {
   background: url('https://d3905n0khyu9wc.cloudfront.net/assessment/todo-js/images/label.png')
 }
 
-nav #nav_completed h1:before {
+nav #completed h1:before {
   background: url('https://d3905n0khyu9wc.cloudfront.net/assessment/todo-js/images/completed.png')
 }
 
@@ -67,6 +71,7 @@ nav h1 span {
   padding: 0 10px;
   margin-right: 30px;
   border-radius: 10px;
+  color: rgba(255, 255, 255, 0.5);
 }
 
 nav .highlighted {
@@ -75,6 +80,7 @@ nav .highlighted {
 
 nav .highlighted span {
   background-color: #148fd5;
+  color: #fff;
 }
 
 nav p {
@@ -181,7 +187,7 @@ main li a:hover {
   color: #148fd5;
 }
 
-main h2 span {
+main span#main_list_count {
   font-size: 14px;
   margin: 4px 0 0 20px;
   background-color: #148fd5;
