--- a/main.css
+++ b/main.css
@@ -214,6 +214,8 @@ main span#main_list_count {
 #modal {
   display: none;
   position: fixed;
+  top: 0;
+  left: 0;
   height: 100%;
   width: 100%;
   background: rgba(0, 0, 0, .5);
