--- a/main.css
+++ b/main.css
@@ -38,7 +38,6 @@ h2 {
 nav {
   display: inline-block;
   float: left;
-  height: 1000px;
   width: 335px;
   background-color: #464f77;
   height: 100%;
@@ -74,9 +73,10 @@ nav #completed h1:before {
 }
 
 nav h1 span {
+  display: inline-block;
   padding: 0 10px;
-  margin-right: 30px;
-  border-radius: 10px;
+  margin: 4px 30px 0 0;
+  border-radius: 35%;
   color: rgba(255, 255, 255, 0.5);
 }
 
@@ -104,7 +104,7 @@ nav span {
   font-size: 14px;
   margin-right: 35px;
   background-color: #6b7292;
-  padding: 0 5px;
+  padding: 0 4px;
   border-radius: 50%;
 }
 
@@ -127,7 +127,7 @@ main {
   /*float: left;*/
   margin-left: 355px;
   padding-right: 20px;
-  max-width: 600px;
+  max-width: 1000px;
   /*width: 60%;*/
 }
 
@@ -209,10 +209,12 @@ main li a:hover {
 
 main span#main_list_count {
   font-size: 14px;
-  margin: 4px 0 0 20px;
+  display: inline-block;
+  vertical-align: top;
+  margin: 5px 0 0 20px;
   background-color: #148fd5;
   color: #fff;
-  padding: 0 5px;
+  padding: 0 4px;
   border-radius: 50%;
 }
 
@@ -258,7 +260,7 @@ form {
 #modal dt {
   padding-top: 8px;
   width: 20%;
-  color: #148fd5;
+  color: #757575;
 }
 
 .button_holder {
@@ -278,6 +280,7 @@ form {
   font-size: 1rem;
   box-sizing: border-box;
   padding: 10px;
+  text-align: center;
 }
 
 /*clearfix*/
